[package]
name = "four"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.19.1"
eframe = "0.21.3"
egui = "0.21.0"
linked-hash-map = "0.5.6"
rand = "0.8.5"

[profile.release]
strip=true
opt-level="z"
lto=true
codegen-units=1
panic="abort"